# pmdr

./: LICENSE  README.md  pyproject.toml
src/pmdr/: __init__.py  __main__.py  pmdr.py
